--- a/src/components/partials/value.css
+++ b/src/components/partials/value.css
@@ -9,8 +9,6 @@
     overflow: hidden;
     border: none;
 
-    font-family: 'Hack', monospace;
-    font-size: 11px;
     color: var(--color-text-secondary);
     user-select: text;
     cursor: text;
@@ -20,6 +18,8 @@
     box-sizing: border-box !important;
     -moz-box-sizing: border-box !important;
     -webkit-box-sizing: border-box !important;
+
+    font-family: var(--font-family-for-input);
 }
 
 .guify-value-input-right {
